Bug 333018 - Missing/failing message extraction + Word Puzzles
Summary: Missing/failing message extraction + Word Puzzles
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: i18n (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-03 12:29 UTC by Burkhard Lück
Modified: 2014-04-03 15:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Extraction fix two strings in aboutdialog.cpp (758 bytes, patch)
2014-04-03 12:29 UTC, Burkhard Lück
Details
add missing tr() (1.02 KB, patch)
2014-04-03 12:31 UTC, Burkhard Lück
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2014-04-03 12:29:45 UTC
Created attachment 85934 [details]
Extraction fix two strings in aboutdialog.cpp

1) Extraction fails for two strings in aboutdialog.cpp, patch attached.

2) Missing extraction e.g. all menu items in "Create -> Standard Plugin", 
"Create -> Fit Plugin" and "Create -> Filter Plugin"
Apparently you find them by grepping for pluginName() + pluginDescription() in 
src/datasources/*/*cpp + src/plugins/dataobject/*/*.cpp +  
src/plugins/filters/*/*.cpp+src/plugins/fits/*/*.cpp
Missing extraction in labelbuilder.cpp, patch attached.

3) Word Puzzles, see 
http://techbase.kde.org/Development/Tutorials/Localization/i18n_Mistakes#Pitfall_.232:_Word_Puzzles
for example in
filterfitdialog.cpp:159:    title = tr("Edit ") + pluginName + tr(" Plugin");
filterfitdialog.cpp:161:    title = tr("New ") + pluginName + tr(" Plugin");
basicplugindialog.cpp:55:    title = tr("Edit ") + pluginName + tr(" Plugin");
basicplugindialog.cpp:57:    title = tr("New ") + pluginName + tr(" Plugin");
Comment 1 Burkhard Lück 2014-04-03 12:31:40 UTC
Created attachment 85935 [details]
add missing tr()
Comment 2 Netterfield 2014-04-03 13:57:41 UTC
Git commit 20a26751626075ef636b70d108cd092fdd12df3a by Barth Netterfield.
Committed on 03/04/2014 at 13:54.
Pushed by netterfield into branch 'master'.

Fix some translation troubles.
Applies the first two patches attachet to the bug report.

M  +2    -2    src/libkstapp/aboutdialog.cpp
M  +2    -2    src/widgets/labelbuilder.cpp

http://commits.kde.org/kst-plot/20a26751626075ef636b70d108cd092fdd12df3a
Comment 3 Netterfield 2014-04-03 15:07:59 UTC
Git commit fa6d7ec48f0384b62031e2e4200b6a5232149c07 by Barth Netterfield.
Committed on 03/04/2014 at 15:05.
Pushed by netterfield into branch 'master'.

Fix some unstranslated strings/word puzzles
Fix unstranslated strings and word puzzles in plugins
and data sources.

M  +2    -2    src/datasources/ascii/asciiplugin.cpp
M  +2    -2    src/datasources/dirfilesource/dirfilesource.cpp
M  +2    -2    src/datasources/fitsimage/fitsimage.cpp
M  +2    -2    src/datasources/matlab/matlab.cpp
M  +2    -3    src/datasources/netcdf/netcdfplugin.cpp
M  +2    -2    src/datasources/qimagesource/qimagesource.cpp
M  +2    -2    src/datasources/sampledatasource/sampledatasource.cpp
M  +2    -2    src/datasources/sourcelist/sourcelist.cpp
M  +4    -4    src/plugins/dataobject/activitylevel/activitylevel.cpp
M  +3    -3    src/plugins/dataobject/bin/bin.cpp
M  +3    -3    src/plugins/dataobject/chop/chop.cpp
M  +3    -3    src/plugins/dataobject/convolution/convolve/convolve.cpp
M  +3    -3    src/plugins/dataobject/convolution/deconvolve/deconvolve.cpp
M  +3    -3    src/plugins/dataobject/correlation/autocorrelation/autocorrelation.cpp
M  +3    -3    src/plugins/dataobject/correlation/crosscorrelation/crosscorrelation.cpp
M  +3    -3    src/plugins/dataobject/crossspectrum/crossspectrum.cpp
M  +3    -3    src/plugins/dataobject/effectivebandwidth/effectivebandwidth.cpp
M  +3    -3    src/plugins/dataobject/genericfilter/genericfilter.cpp
M  +3    -3    src/plugins/dataobject/interpolations/akima/akima.cpp
M  +3    -3    src/plugins/dataobject/interpolations/akimaperiodic/akimaperiodic.cpp
M  +3    -3    src/plugins/dataobject/interpolations/cspline/cspline.cpp
M  +3    -3    src/plugins/dataobject/interpolations/csplineperiodic/csplineperiodic.cpp
M  +3    -3    src/plugins/dataobject/interpolations/linear/linear.cpp
M  +3    -3    src/plugins/dataobject/interpolations/polynomial/polynomial.cpp
M  +3    -3    src/plugins/dataobject/linefit/linefit.cpp
M  +3    -5    src/plugins/dataobject/lockin/lockin.cpp
M  +3    -3    src/plugins/dataobject/noiseaddition/noiseaddition.cpp
M  +3    -3    src/plugins/dataobject/periodogram/periodogram.cpp
M  +3    -3    src/plugins/dataobject/phase/phase.cpp
M  +3    -3    src/plugins/dataobject/shift/shift.cpp
M  +3    -3    src/plugins/dataobject/statistics/statistics.cpp
M  +3    -3    src/plugins/dataobject/syncbin/syncbin.cpp
M  +3    -3    src/plugins/filters/butterworth_bandpass/butterworth_bandpass.cpp
M  +3    -3    src/plugins/filters/butterworth_bandstop/butterworth_bandstop.cpp
M  +3    -3    src/plugins/filters/butterworth_highpass/butterworth_highpass.cpp
M  +3    -3    src/plugins/filters/butterworth_lowpass/butterworth_lowpass.cpp
M  +4    -4    src/plugins/filters/cumulativeaverage/cumulativeaverage.cpp
M  +4    -4    src/plugins/filters/cumulativesum/cumulativesum.cpp
M  +4    -4    src/plugins/filters/despike/filterdespike.cpp
M  +4    -4    src/plugins/filters/differentiation/differentiation.cpp
M  +4    -4    src/plugins/filters/unwind/filterunwind.cpp
M  +3    -3    src/plugins/fits/exponential_unweighted/fitexponential_unweighted.cpp
M  +3    -3    src/plugins/fits/exponential_weighted/fitexponential_weighted.cpp
M  +3    -3    src/plugins/fits/gaussian_unweighted/fitgaussian_unweighted.cpp
M  +3    -3    src/plugins/fits/gaussian_weighted/fitgaussian_weighted.cpp
M  +3    -3    src/plugins/fits/gradient_unweighted/fitgradient_unweighted.cpp
M  +3    -3    src/plugins/fits/gradient_weighted/fitgradient_weighted.cpp
M  +3    -3    src/plugins/fits/kneefrequency/fitkneefrequency.cpp
M  +3    -3    src/plugins/fits/linear_unweighted/fitlinear_unweighted.cpp
M  +3    -3    src/plugins/fits/linear_weighted/fitlinear_weighted.cpp
M  +3    -3    src/plugins/fits/lorentzian_unweighted/fitlorentzian_unweighted.cpp
M  +3    -3    src/plugins/fits/lorentzian_weighted/fitlorentzian_weighted.cpp
M  +3    -3    src/plugins/fits/polynomial_unweighted/fitpolynomial_unweighted.cpp
M  +3    -3    src/plugins/fits/polynomial_weighted/fitpolynomial_weighted.cpp
M  +3    -3    src/plugins/fits/sinusoid_unweighted/fitsinusoid_unweighted.cpp
M  +3    -3    src/plugins/fits/sinusoid_weighted/fitsinusoid_weighted.cpp

http://commits.kde.org/kst-plot/fa6d7ec48f0384b62031e2e4200b6a5232149c07
Comment 4 Netterfield 2014-04-03 15:23:59 UTC
Git commit 4e128ad1c0e63342baf8d0df214b0b827ea0a05c by Barth Netterfield.
Committed on 03/04/2014 at 15:21.
Pushed by netterfield into branch 'master'.

Fix word puzzles
This seems to fix all of the problems of the form described
in the bug report - at least I can't find any more...

M  +1    -1    src/libkstapp/baddatasourcedialog.cpp
M  +2    -2    src/libkstapp/basicplugindialog.cpp
M  +3    -3    src/libkstapp/datawizard.cpp
M  +2    -2    src/libkstapp/filterfitdialog.cpp
M  +1    -1    src/libkstapp/viewitem.cpp

http://commits.kde.org/kst-plot/4e128ad1c0e63342baf8d0df214b0b827ea0a05c