Fix word puzzles

BUG: 333018
This seems to fix all of the problems of the form described
in the bug report - at least I can't find any more...